--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
 					<button class="tips__item" id="fifteen">15%</button>
 					<button class="tips__item" id="twentyfive">25%</button>
 					<button class="tips__item" id="fifty">50%</button>
-					<button class="tips__item" id="Custom">Custom</button>
+					<input  class="tips__item" type="number" placeholder="Custom" id="Custom"></input>
 				</div>
 				
 			</div>
@@ -60,7 +60,6 @@
 			</div>
 		</div>
 	</div>
-
 <footer>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
