--- a/src/index.html
+++ b/src/index.html
@@ -35,10 +35,10 @@
 				
 			</div>
 			<div class="mainwindow__people">
-				<span class="people__title">Number of People</span>
+				<span class="people__title">Number of People <span class='title__err'></span></span>
 				<div class="people__content">
 					<img class="people__icon" src="./img/icon-person.svg" alt="dollar">
-					<input tabindex="0" value="1" class="people__input" placeholder ="0" type="number" maxlength="3">
+					<input tabindex="0" value="1" class="people__input" placeholder ="0" type="number" maxlength="2">
 				</div>
 			</div>
 		</div>
